# colorclass

./: .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  Makefile  Pipfile  README.md  build.sh  counterfactuals.py  example.py  pyproject.toml  tox.ini
.devcontainer/: devcontainer.json
.github/workflows/: build.yml
colorclass/: __init__.py  __main__.py  codes.py  color.py  core.py  parse.py  search.py  toggles.py  windows.py
tests/: conftest.py  screenshot.py  test___main__.py  test_codes.py  test_color.py  test_core.py  test_parse.py  test_search.py
tests_fragile/: test_example.py  test_windows.py
