[tool.poetry]
name = "colorclass"
version = "2.2.2"
description = "Colorful worry-free console applications for Linux, Mac OS X, and Windows."
authors = [
    "Robpol86 <robpol86@gmail.com>",
    "Matthew Martin <matthewdeanmartin@gmail.com>"
]
keywords = ["Shell", "Bash", "ANSI", "ASCII", "terminal", "console", "colors", "automatic"]
classifiers = [
        "Development Status :: 5 - Production/Stable",
        "Environment :: Console",
        "Environment :: MacOS X",
        "Environment :: Win32 (MS Windows)",
        "Intended Audience :: Developers",
        "License :: OSI Approved :: MIT License",
        "Operating System :: MacOS :: MacOS X",
        "Operating System :: Microsoft :: Windows",
        "Operating System :: POSIX :: Linux",
        "Operating System :: POSIX",
        "Programming Language :: Python :: 2.6",
        "Programming Language :: Python :: 2.7",
        "Programming Language :: Python :: 3.3",
        "Programming Language :: Python :: 3.4",
        "Programming Language :: Python :: 3.5",
        "Programming Language :: Python :: 3.6",
        "Programming Language :: Python :: 3.7",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: Implementation :: PyPy",
        "Topic :: Software Development :: Libraries",
        "Topic :: Terminals",
        "Topic :: Text Processing :: Markup"
]
packages = [
    { include = "colorclass" },
]
include = [
    "colorclass/**/*.py",
]
exclude = [
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/matthewdeanmartin/colorclass"
homepage = "https://github.com/matthewdeanmartin/colorclass"
documentation = "https://github.com/matthewdeanmartin/colorclass"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/matthewdeanmartin/colorclass/issues"
"Change Log" = "https://github.com/matthewdeanmartin/colorclass/blob/master/CHANGELOG.md"

[tool.poetry.scripts]


[tool.poetry.dependencies]
# per vermin's estimation
python = ">=2.6 || >=3.0"

[tool.poetry.dev-dependencies]
pytest = "==6.0.1"

[build-system]
requires = ["poetry-core>=0.12"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 1000

# Enable Pyflakes `E` and `F` codes by default.
select = ["E", "F"]
ignore = [
    "E722",
    "E501",
]

# Exclude a variety of commonly ignored directories.
exclude = [
    "dead_code",
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "hide"
]
per-file-ignores = { }

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
